fix: Make migration idempotent and add npm install legacy-peer-deps option
- Fix migration 000038 to be idempotent (check if column exists before adding)
- Add --legacy-peer-deps option for npm install to handle @sentry/nextjs conflict with Next.js 16
- Add install:legacy script to package.json
- Create VPS fix instructions document

--- a/fe/package.json
+++ b/fe/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "install:legacy": "npm install --legacy-peer-deps"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -52,6 +53,6 @@
     "typescript": "^5"
   },
   "optionalDependencies": {
-    "@sentry/nextjs": "^8.0.0"
+    "@sentry/nextjs": "^8.40.0"
   }
 }
